# infra

./: .clang-format  CMakeLists.txt
.github/workflows/: test.yml
include/infra/: arch.hpp  assert.hpp  attributes.hpp  binary_serialization.cpp.hpp  binary_serialization.hpp  common.hpp  compiler.hpp  cpu.cpp.hpp  cpu.hpp  encoding.hpp  endian.hpp  enum_util.hpp  enums.hpp  memory.hpp  meta.hpp  os.cpp.hpp  os.hpp  process.cpp.hpp
include/infra/assert/: assert.hpp
include/infra/attributes/: attributes.hpp
include/infra/cpu/: hint.hpp  info.hpp
include/infra/extension/binary_serialization/: adaptor_std_vector.hpp  byte_container_std_array.hpp  byte_container_std_vector.hpp  structure_std_basic_string.hpp
include/infra/extension/binary_serialization/adaptors/: std_array.hpp  std_vector.hpp
include/infra/extension/binary_serialization/structure/: std_basic_string.hpp  std_map.hpp  std_pair.hpp  std_u8string.hpp  std_vector.hpp
include/infra/memory/: memory.hpp
include/infra/platform/: compiler.hpp
scripts/: run_all_tests.py
tests/: CMakeLists.txt  binary_serialization.cpp  compile_succeed.cpp  enum_util.cpp  test_config.hpp.in  test_utils.hpp  x86_32.cpp  x86_64.cpp
